# slidegen

./: .gitignore  pyproject.toml  server.py  test_llm_client.ipynb
api/: lifespan.py  main.py
api/enums/: llm_provider.py
api/models/sql/: presentation.py
api/utils/: get_env.py
api/v1/ppt/: router.py
api/v1/ppt/endpoints/: files.py  ollama.py  outlines.py  presentation.py  qwen.py
docs/: database-schema.mmd  database_config.mmd  database_data_flow.mmd  seq_flow_of_presentation.mmd
enums/: image_provider.py  llm_provider.py  tone.py
models/: llm_message.py  llm_tool_call.py  llm_tools.py  sse_response.py
services/: database.py  langraph_client.py  llm_client.py  llm_langchain_client.py  llm_langraph_tools.py  llm_tool_calls_handler.py  temp_file.py
utils/: available_models.py  dummy_functions.py  get_dynamic_models.py  get_env.py  llm_provider.py  parser.py  schema_utils.py  validators.py
utils/llm_calls/: generate_presentation_outlines.py
