[project]
name = "slidegen"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "google-genai>=0.8.0",
    "python-pptx>=1.0.0",
    "dirtyjson>=1.0.8"
]